# Voxagen

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.user.4.8-pre1  Makefile  README.md  compile_commands.json
include/graphics/: renderer.h
include/utilities/: inputmanager.h  useroptions.h
include/world/: chunk.h  cube.h
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
options/: useroptions.ini
src/: game.cpp  game.h  game.hpp  main.cpp  worldvariables.hpp
src/graphics/: renderer.cpp
src/gui/: guimanager.cpp  guimanager.hpp  imgui_impl_opengl3.h
src/shaders/: BlockShader.frag  BlockShader.vert  LightShader.frag  LightShader.vert  TestShader.frag  TestShader.vert  WaterShader.frag  WaterShader.vert
src/utilities/: inputmanager.cpp  useroptions.cpp
src/utility/: camera.hpp  chunkdata.cpp  chunkdata.hpp  chunkgenerator.cpp  chunkgenerator.hpp  chunkmanager.cpp  chunkmanager.hpp  chunkmesher.cpp  chunkmesher.hpp  chunkstorage.cpp  chunkstorage.hpp  debug.hpp  inputcontroller.cpp  inputcontroller.hpp  loader.cpp  loader.hpp  mesh.cpp  mesh.hpp  perlinnoise.cpp  perlinnoise.hpp  shader.hpp  voxagenengine.hpp  voxagenrenderer.hpp  voxagensettings.cpp  voxagensettings.hpp  voxelrenderer.cpp  voxelrenderer.hpp
src/utility/3P/: stb_image.h
src/utility/3P/ThreadPool-master/: ThreadPool.h  fillvtask.hpp  genvtask.hpp  (+3 more)
src/utility/Camera/: camera.hpp
src/utility/Chunk/: chunk.cpp  chunk.hpp  chunkgenerator.cpp  chunkgenerator.hpp  chunkhelper.hpp  chunkmanager.cpp  chunkmanager.hpp  chunkmesher.cpp  chunkmesher.hpp  chunkstorage.cpp  chunkstorage.hpp
src/utility/ChunkIO/: chunkio.hpp  filechunkio.cpp  filechunkio.hpp  gorpchunkio.cpp  gorpchunkio.hpp
src/utility/Generation/: terraingenerator.cpp  terraingenerator.hpp  weirdgenerator.cpp  weirdgenerator.hpp  worldgenerator.hpp
src/utility/Input/: inputcontroller.cpp  inputcontroller.hpp
src/utility/Mesh/: mesh.cpp  mesh.hpp
src/utility/MyOctree/: octree.hpp
src/utility/Voxagen/: debug.hpp  loader.cpp  loader.hpp  voxagenengine.hpp  voxagenrenderer.hpp
src/world/: chunk.cpp  chunk.h  chunk.hpp  cube.cpp  cube.hpp  worldattributes.cpp  worldattributes.hpp
src/world/generation/: terraingenerator.cpp  terraingenerator.hpp  weirdgenerator.cpp  weirdgenerator.hpp  worldgenerator.hpp
